[package]
name = "tap"
version = "0.0.1"
edition = "2021"
authors = ["Brayden Moon <crazywolf132@gmail.com>"]
description = "A next-gen version of touch with extended capabilities"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
filetime = "0.2.24"
glob = "0.3.1"
tempfile = "3.12.0"

[[bin]]
name = "tap"
path = "src/main.rs"
